--- a/20240708_BigData.ipynb
+++ b/20240708_BigData.ipynb
@@ -173,51 +173,136 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "rQPesYDb59_T"
-      },
       "source": [
-        "1.보관 식재료 출력 2. 식재료 추가 3. 식재료 삭제 5. 종료"
-      ]
+        "1. 보관 식재료 출력 2. 식재료 추가 3. 오래된 식재료 삭제 4. 식재료 재고 조회 5. 종료"
+      ],
+      "metadata": {
+        "id": "fl4KSqgaQrQe"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "09foWtUT6KCb",
-        "outputId": "f1e873b1-fb4a-4e9a-f42c-529f8bd9f189"
+        "outputId": "46831007-8fb1-4346-efd3-c337c77f8c7c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.보관 식재료 출력 2. 식재료 추가 3. 식재료 삭제 4. 식재료 재고 조회 5. 종료 \n",
+            "1.보관 식재료 출력 2. 식재료 추가 3. 오래된 식재료 삭제 4. 식재료 재고 조회 5. 종료 \n",
+            "\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 사과\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 포도\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 바나나\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 사과\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 포도\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 사과\n",
+            "\n",
+            "관리 메뉴 입력 : 1\n",
+            " - 보관 식재료 출력 \n",
+            "\n",
+            "['사과', '포도', '바나나', '사과', '포도', '사과']\n",
+            "\n",
+            "관리 메뉴 입력 : 2\n",
+            " - 식재료 추가 \n",
+            "\n",
+            "식재료 입력 : 오이\n",
+            "\n",
+            "관리 메뉴 입력 : 1\n",
+            " - 보관 식재료 출력 \n",
+            "\n",
+            "['사과', '포도', '바나나', '사과', '포도', '사과', '오이']\n",
+            "\n",
+            "관리 메뉴 입력 : 3\n",
+            " - 오래된 식재료 삭제 \n",
+            "\n",
+            "\n",
+            "관리 메뉴 입력 : 1\n",
+            " - 보관 식재료 출력 \n",
+            "\n",
+            "['사과', '포도', '바나나', '사과', '포도', '사과']\n",
+            "\n",
+            "관리 메뉴 입력 : 4\n",
+            " - 식재료 재고 조회 \n",
+            "\n",
+            "조회할 식재료 입력 : 포도\n",
+            "2 개\n",
+            "\n",
+            "관리 메뉴 입력 : 4\n",
+            " - 식재료 재고 조회 \n",
+            "\n",
+            "조회할 식재료 입력 : 사과\n",
+            "3 개\n",
+            "\n",
+            "관리 메뉴 입력 : 4\n",
+            " - 식재료 재고 조회 \n",
+            "\n",
+            "조회할 식재료 입력 : 바나나\n",
+            "1 개\n",
+            "\n",
+            "관리 메뉴 입력 : 5\n",
+            " - 종료 \n",
             "\n"
           ]
         }
       ],
       "source": [
-        "print(\"1.보관 식재료 출력 2. 식재료 추가 3. 식재료 삭제 4. 식재료 재고 조회 5. 종료\",\"\\n\")\n",
+        "print(\"1.보관 식재료 출력 2. 식재료 추가 3. 오래된 식재료 삭제 4. 식재료 재고 조회 5. 종료\",\"\\n\")\n",
         "food = []\n",
         "while True:\n",
         "  a = int(input(\"\\n관리 메뉴 입력 : \"))\n",
         "  if a == 1:\n",
-        "      print(\"보관 식재료 출력\",\"\\n\")\n",
+        "      print(\" - 보관 식재료 출력\",\"\\n\")\n",
         "      print(food)\n",
         "  elif a == 2:\n",
-        "      print(\"식재료 추가\",\"\\n\")\n",
+        "      print(\" - 식재료 추가\",\"\\n\")\n",
         "      food.append(input(\"식재료 입력 : \"))\n",
         "  elif a == 3:\n",
-        "      print(\"오래된 식재료 삭제\",\"\\n\")\n",
+        "      print(\" - 오래된 식재료 삭제\",\"\\n\")\n",
         "      food.pop(-1)\n",
         "  elif a == 4:\n",
-        "      print(\"4. 식재료 재고 조회\",\"\\n\")\n",
+        "      print(\" - 식재료 재고 조회\",\"\\n\")\n",
+        "      count = 0\n",
+        "      thing = input(\"조회할 식재료 입력 : \")\n",
+        "      if thing not in food:\n",
+        "        print(\"없는 재고 입니다\")\n",
+        "      else:\n",
+        "        for i in food:\n",
+        "          if i == thing:\n",
+        "            count += 1\n",
+        "        print(count,\"개\")\n",
         "  elif a == 5:\n",
-        "      print(\"종료\",\"\\n\")\n",
+        "      print(\" - 종료\",\"\\n\")\n",
         "      break\n",
         "  else:\n",
         "      print(\"다른 번호를 입력하세요\",\"\\n\")"
@@ -225,18 +310,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "xpkucSsm6rBr"
+        "id": "xpkucSsm6rBr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e83f0cc9-b5f9-4047-8103-bab684654445"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "확인할 과일 입력 : 포도\n",
+            "3 개\n"
+          ]
+        }
+      ],
+      "source": [
+        "list = ['사과','바나나','포도','사과','포도','포도']\n",
+        "thing = input(\"확인할 과일 입력 : \")\n",
+        "count = 0\n",
+        "\n",
+        "for i in list:\n",
+        "  if thing == i:\n",
+        "      count += 1\n",
+        "\n",
+        "print(count,\"개\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6WANr5rsSeft"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDD5ZpGVVs3sEmaOVfhkp2",
+      "authorship_tag": "ABX9TyM4XltM9zasFCjV1hQQQLnN",
       "include_colab_link": true
     },
     "kernelspec": {
